--- a/index.html
+++ b/index.html
@@ -431,38 +431,42 @@ y suscribite a este reinado de placer</p>
 </section>
 
 <!-- /CONTACT FORM -->
+
+
 <!-- SECTION con fondo + contenido del footer -->
-<section class="footer-section text-white py-5" style="background-image: url('Assets/HOME.fotos/'); background-size: cover; background-position: center;">
+<section class="footer-section py-5">
   <div class="container">
     <div class="row text-start">
       <!-- Logo y dirección -->
       <div class="col-12 col-md-3 mb-4">
-      <img src="Assets/HOME.fotos/logo.uva-07.png" alt="UVA Club logo" class="footer-logo mb-3">
-
-        <p class="mb-0">Av. Premium 321<br>Buenos Aires, Argentina<br>Teléfono +54 11 2356 8322</p>
+      <img src="Assets/HOME.fotos/logofooter-07.png" alt="UVA Club logo" class="footer-logo mb-3">
+<ul class="list-unstyled">
+          <li><a href="#" class="text-decoration-none">Av. Premiumwine 2025</a></li>
+          <li><a href="#" class="text-decoration-none">Buenos Aires Argentina,CABA</a></li>
+        
       </div>
 
       <!-- Inicio -->
       <div class="col-6 col-md-2 mb-4">
         <h6 class="fw-bold">inicio</h6>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white text-decoration-none">Cómo funciona</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Historia</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Suscripciones</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Testimonios</a></li>
-          <li><a href="#" class="text-white text-decoration-none">FQA</a></li>
+          <li><a href="#" class="text-decoration-none">Cómo funciona</a></li>
+          <li><a href="#" class="text-decoration-none">Historia</a></li>
+          <li><a href="#" class="text-decoration-none">Suscripciones</a></li>
+          <li><a href="#" class="text-decoration-none">Testimonios</a></li>
+          <li><a href="#" class="text-decoration-none">FQA</a></li>
         </ul>
       </div>
 
       <!-- WineSwap -->
       <div class="col-6 col-md-3 mb-4">
-        <h6 class="fw-bold">WineSwap</h6>
+        <h6 class="fw-bold">Wine Swap</h6>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white text-decoration-none">Qué es</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Cómo funciona</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Intercambios</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Ofertas</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Términos y condiciones</a></li>
+          <li><a href="#" class="text-decoration-none">Qué es</a></li>
+          <li><a href="#" class="text-decoration-none">Cómo funciona</a></li>
+          <li><a href="#" class="text-decoration-none">Intercambios</a></li>
+          <li><a href="#" class="text-decoration-none">Ofertas</a></li>
+          <li><a href="#" class="text-decoration-none">Términos y condiciones</a></li>
         </ul>
       </div>
 
@@ -470,22 +474,22 @@ y suscribite a este reinado de placer</p>
       <div class="col-12 col-md-4">
         <h6 class="fw-bold">AYUDA</h6>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-white text-decoration-none">Atención al cliente</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Términos y condiciones</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Política de Privacidad</a></li>
-          <li><a href="#" class="text-white text-decoration-none">Preguntas frecuentes</a></li>
+          <li><a href="#" class="text-decoration-none">Atención al cliente</a></li>
+          <li><a href="#" class="text-decoration-none">Términos y condiciones</a></li>
+          <li><a href="#" class="text-decoration-none">Política de Privacidad</a></li>
+          <li><a href="#" class="text-decoration-none">Preguntas frecuentes</a></li>
         </ul>
       </div>
     </div>
-  </div>
-</section>
-
-<!-- Footer legal aparte (sin fondo, más chico) -->
+    <!-- Footer legal aparte (sin fondo, más chico) -->
 <footer class="text-center py-4">
   <div class="text-center pt-3">
     <p class="footer-copy">© 2025 Belluccia 3 - Visible Template. Todos los derechos reservados Agustina Romero.</p>
   </div>
 </footer>
+  </div>
+</section>
+
 
 <!-- Bootstrap Bundle JS (incluye Popper) -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
